@@ -1,3 +1,4 @@
+ - New class GridHierarchy
 0.3.10
  - Use new boundary structure in Galerkin
  - Make dolfin_start() and dolfin_end() work
